# astar

./: .gitignore  LICENSE  README.md  astar.cabal  stack.yaml
Data/Graph/: AStar.hs
test/: TestAStar.hs
