name:                astar
version:             0.3.0
synopsis:            General A* search algorithm.
description:         This is a data-structure independent implementation of A* search.
category:            Data
license:             BSD3
license-file:        LICENSE
author:              Cale Gibbard
maintainer:          cgibbard@gmail.com
build-Depends:       base,
                     unordered-containers >= 0.2 && < 0.3,
                     psqueues >= 0.2 && < 0.3,
                     hashable >= 1.2 && < 1.3
build-type:          Simple
exposed-modules:     Data.Graph.AStar
ghc-options:         -O2
