name:                astar
version:             0.3.0.1
synopsis:            General A* search algorithm.
description:         This is a data-structure independent implementation of A* search.
category:            Data
license:             BSD3
license-file:        LICENSE
author:              Cale Gibbard, Johannes Weiss
maintainer:          public@tux4u.de
build-type:          Simple
Homepage:            https://github.com/weissi/astar
bug-reports:         https://github.com/weissi/astar/issues
copyright:           2008 Cale Gibbard
                     2016 Johannes Weiss
tested-with:         GHC==7.10.1
cabal-version:       >= 1.8

library
  hs-source-dirs:    src
  exposed-modules:   Data.Graph.AStar
  build-depends:     base >= 4 && < 5,
                     unordered-containers >= 0.2,
                     psqueues >= 0.2,
                     hashable >= 1.2

test-suite test-astar
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  main-is:           TestAStar.hs
  build-depends:     astar,
                     base >= 4 && < 5,
                     unordered-containers >= 0.2,
                     HTF >= 0.13 && < 0.14

source-repository head
  type:     git
  location: https://github.com/weissi/astar.git
